# eg-demo

./: Cargo.toml  build.rs  openocd.cfg  rust-toolchain.toml
src/: main.rs  rm67162.rs  vial.rs  w25q.rs
