[package]
name = "eg-demo"
version = "0.1.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.3"
embassy-time = { version = "0.3", path = "/Users/haobogu/Projects/rust/embassy/embassy-time", features = ["tick-hz-32_768", "defmt"] }
embassy-stm32 = { version = "0.1", path = "/Users/haobogu/Projects/rust/embassy/embassy-stm32", features = [
    "stm32h7b0vb",
    "defmt",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { version = "0.5", path = "/Users/haobogu/Projects/rust/embassy/embassy-executor", features = [
    "defmt",
    "arch-cortex-m",
    "task-arena-size-8192",
    "executor-thread",
    "integrated-timers",
] }
static_cell = "2"
defmt = "0.3"
defmt-rtt = "0.4"
tinytga = "*"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1.0"
embassy-embedded-hal = { version = "0.1", path = "/Users/haobogu/Projects/rust/embassy/embassy-embedded-hal"}
embedded-graphics = "0.8.1"
embassy-sync = { version = "0.6", path = "/Users/haobogu/Projects/rust/embassy/embassy-sync" }

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
